// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JoinRequest should render correctly on multiple join requests 1`] = `
<div
  class="join-request"
>
  <div
    class="join-request__header"
  >
    JoinRequest.title
  </div>
  <div
    class="join-request__main"
  >
    <ul
      class="join-request__requests"
    >
      <li
        class="join-request__unique-request-container"
      >
        <figure
          class="join-request__request-figure"
        >
          <div
            class="user-avatar"
            title="displayName-0"
          >
            <svg
              class="avatar accent-color__lean-lilac"
              height="280px"
              version="1.1"
              viewBox="0 0 264 280"
              width="264px"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <desc>
                Created with getavataaars.com
              </desc>
              <defs>
                <circle
                  cx="120"
                  cy="120"
                  id="react-path-15"
                  r="120"
                />
                <path
                  d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
                  id="react-path-16"
                />
                <path
                  d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
                  id="react-path-17"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Avataaar"
                stroke="none"
                stroke-width="1"
              >
                <g
                  id="Avataaar/Circle"
                  transform="translate(-825.000000, -1100.000000)"
                >
                  <g
                    transform="translate(825.000000, 1100.000000)"
                  >
                    <g
                      fill-rule="evenodd"
                      id="Circle"
                      stroke-width="1"
                      transform="translate(12.000000, 40.000000)"
                    >
                      <mask
                        fill="white"
                        id="react-mask-18"
                      >
                        <use
                          xlink:href="#react-path-15"
                        />
                      </mask>
                      <use
                        fill="#E6E6E6"
                        id="Circle-Background"
                        xlink:href="#react-path-15"
                      />
                      <g
                        fill="#65C9FF"
                        id="Color/Palette/Blue-01"
                        mask="url(#react-mask-18)"
                      >
                        <rect
                          height="240"
                          id="🖍Color"
                          width="240"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <mask
                      fill="white"
                      id="react-mask-19"
                    >
                      <use
                        xlink:href="#react-path-16"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      fill-rule="evenodd"
                      id="Avataaar"
                      mask="url(#react-mask-19)"
                      stroke-width="1"
                    >
                      <g
                        id="Body"
                        transform="translate(32.000000, 36.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-20"
                        >
                          <use
                            xlink:href="#react-path-17"
                          />
                        </mask>
                        <use
                          fill="#D0C6AC"
                          xlink:href="#react-path-17"
                        />
                        <g
                          fill="#F8D25C"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-20)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000)"
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                        <path
                          d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                          fill="#000000"
                          fill-opacity="0.100000001"
                          id="Neck-Shadow"
                          mask="url(#react-mask-20)"
                        />
                      </g>
                      <g
                        id="Clothing/Shirt-Scoop-Neck"
                        transform="translate(0.000000, 170.000000)"
                      >
                        <defs>
                          <path
                            d="M181.544255,32.3304167 C210.784209,41.4878872 232,68.7921987 232,101.051724 L232,110 L32,110 L32,101.051724 C32,68.3969699 53.7388273,40.8195914 83.5340368,32.0020332 C83.182234,33.4201865 83,34.8712315 83,36.3476251 C83,52.6289957 105.161905,65.8276544 132.5,65.8276544 C159.838095,65.8276544 182,52.6289957 182,36.3476251 C182,34.9849859 181.844766,33.6439396 181.544255,32.3304167 Z"
                            id="react-path-21"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-22"
                        >
                          <use
                            xlink:href="#react-path-21"
                          />
                        </mask>
                        <use
                          fill="#E6E6E6"
                          fill-rule="evenodd"
                          id="Clothes"
                          xlink:href="#react-path-21"
                        />
                        <g
                          fill="#65C9FF"
                          fill-rule="evenodd"
                          id="Color/Palette/Gray-01"
                          mask="url(#react-mask-22)"
                        >
                          <rect
                            height="110"
                            id="🖍Color"
                            width="264"
                            x="0"
                            y="0"
                          />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        id="Face"
                        transform="translate(76.000000, 82.000000)"
                      >
                        <g
                          fill="#000000"
                          fill-opacity="0.699999988"
                          id="Mouth/Serious"
                          transform="translate(2.000000, 52.000000)"
                        >
                          <rect
                            height="6"
                            id="Why-so-serious?"
                            rx="3"
                            width="24"
                            x="42"
                            y="18"
                          />
                        </g>
                        <g
                          fill-opacity="0.16"
                          id="Nose/Default"
                          transform="translate(28.000000, 40.000000)"
                        >
                          <path
                            d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                            id="Nose"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          id="Eyes/Side-😒"
                          transform="translate(0.000000, 8.000000)"
                        >
                          <path
                            d="M27.2409577,20.3455337 C26.462715,21.3574913 26,22.6247092 26,24 C26,27.3137085 28.6862915,30 32,30 C35.3137085,30 38,27.3137085 38,24 C38,23.7097898 37.9793961,23.4243919 37.9395713,23.1451894 C37.9474218,22.9227843 37.9097825,22.6709538 37.8153518,22.4071242 C37.7703692,22.2814477 37.7221152,22.1572512 37.6706873,22.0345685 C37.3370199,21.0717264 36.7650456,20.2202109 36.0253277,19.550585 C33.898886,17.3173253 30.5064735,16 26.9975803,16 C22.1644225,16 18.006676,18.648508 16.1601674,22.4473116 C15.6201012,23.5583844 16.5467928,24.3002944 17.4375392,23.5716412 C19.8737584,21.5787519 23.2572061,20.3437884 26.9975803,20.3437884 C27.0788767,20.3437884 27.1600045,20.3443718 27.2409577,20.3455337 Z"
                            id="Eye"
                          />
                          <path
                            d="M85.2409577,20.3455337 C84.462715,21.3574913 84,22.6247092 84,24 C84,27.3137085 86.6862915,30 90,30 C93.3137085,30 96,27.3137085 96,24 C96,23.7097898 95.9793961,23.4243919 95.9395713,23.1451894 C95.9474218,22.9227843 95.9097825,22.6709538 95.8153518,22.4071242 C95.7703692,22.2814477 95.7221152,22.1572512 95.6706873,22.0345685 C95.3370199,21.0717264 94.7650456,20.2202109 94.0253277,19.550585 C91.898886,17.3173253 88.5064735,16 84.9975803,16 C80.1644225,16 76.006676,18.648508 74.1601674,22.4473116 C73.6201012,23.5583844 74.5467928,24.3002944 75.4375392,23.5716412 C77.8737584,21.5787519 81.2572061,20.3437884 84.9975803,20.3437884 C85.0788767,20.3437884 85.1600045,20.3443718 85.2409577,20.3455337 Z"
                            id="Eye"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          fill-rule="nonzero"
                          id="Eyebrow/Outline/Up-Down"
                        >
                          <path
                            d="M15.5914402,14.1619718 C20.0874642,7.83556966 29.6031809,4.65350252 39.3473715,7.79575991 C40.3986323,8.13476518 41.5256656,7.55736801 41.8646708,6.50610724 C42.2036761,5.45484647 41.6262789,4.32781316 40.5750182,3.98880789 C29.1665516,0.309863172 17.8358054,4.09887835 12.3309495,11.8448183 C11.6910852,12.7451779 11.9022584,13.9937761 12.8026181,14.6336404 C13.7029777,15.2735046 14.9515759,15.0623314 15.5914402,14.1619718 Z"
                            id="Eyebrow"
                          />
                          <path
                            d="M73.6376405,21.1577995 C77.5525501,15.6490895 88.2853148,12.56006 97.5304219,14.8304032 C98.6031199,15.0938282 99.6862617,14.4377829 99.9496867,13.3650849 C100.213112,12.2923868 99.5570664,11.2092451 98.4843684,10.9458201 C87.7477584,8.30920485 75.3194947,11.8862211 70.3771498,18.840646 C69.7372855,19.7410057 69.9484587,20.9896038 70.8488184,21.6294681 C71.749178,22.2693324 72.9977762,22.0581591 73.6376405,21.1577995 Z"
                            id="Eyebrow"
                            transform="translate(85.007549, 16.038421) scale(-1, 1) translate(-85.007549, -16.038421) "
                          />
                        </g>
                      </g>
                      <g
                        fill-rule="evenodd"
                        id="Top"
                        stroke-width="1"
                      >
                        <defs>
                          <rect
                            height="280"
                            id="react-path-27"
                            width="264"
                            x="0"
                            y="0"
                          />
                          <path
                            d="M156,180.610951 C173.530782,172.282984 186.048193,155.114792 187.791419,134.867187 C193.569129,134.002364 198,129.018625 198,123 L198,110 C198,104.054007 193.675427,99.1180731 188,98.1659169 L188,92 C188,84.0546578 186.345324,76.495786 183.361772,69.6491845 C173.434911,53 89.3126235,53.8033992 80.7098777,69.4854816 C77.6811789,76.3752214 76,83.9912805 76,92 L76,98.1659169 C70.3245733,99.1180731 66,104.054007 66,110 L66,123 C66,129.018625 70.4308707,134.002364 76.2085808,134.867187 C77.9518066,155.114792 90.4692178,172.282984 108,180.610951 L108,199 L104,199 L104,199 C64.235498,199 32,231.235498 32,271 L32,280 L232,280 L232,271 C232,231.235498 199.764502,199 160,199 L156,199 L156,180.610951 Z M0,5.68434189e-14 L264,5.68434189e-14 L264,280 L0,280 L0,5.68434189e-14 Z"
                            id="react-path-26"
                          />
                          <filter
                            filterUnits="objectBoundingBox"
                            height="108.0%"
                            id="react-filter-23"
                            width="101.5%"
                            x="-0.8%"
                            y="-2.0%"
                          >
                            <feoffset
                              dx="0"
                              dy="2"
                              in="SourceAlpha"
                              result="shadowOffsetOuter1"
                            />
                            <fecolormatrix
                              in="shadowOffsetOuter1"
                              result="shadowMatrixOuter1"
                              type="matrix"
                              values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                            />
                            <femerge>
                              <femergenode
                                in="shadowMatrixOuter1"
                              />
                              <femergenode
                                in="SourceGraphic"
                              />
                            </femerge>
                          </filter>
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-24"
                        >
                          <use
                            xlink:href="#react-path-27"
                          />
                        </mask>
                        <g
                          id="Mask"
                        />
                        <g
                          id="Top/Accesories/Hat"
                          mask="url(#react-mask-24)"
                        >
                          <g
                            transform="translate(-1.000000, 0.000000)"
                          >
                            <g
                              fill-rule="evenodd"
                              id="Hat"
                              stroke-width="1"
                              transform="translate(1.000000, 0.000000)"
                            >
                              <mask
                                fill="white"
                                id="react-mask-25"
                              >
                                <use
                                  xlink:href="#react-path-26"
                                />
                              </mask>
                              <g
                                id="Mask-Hair"
                              />
                              <path
                                d="M123.182388,2 L141.817612,2 L141.817612,2 C160.609055,2 176.866947,15.0804442 180.890118,33.4361631 L190,75 L75,75 L84.1098821,33.4361631 L84.1098821,33.4361631 C88.1330533,15.0804442 104.390945,2 123.182388,2 Z"
                                fill="#1F333C"
                                mask="url(#react-mask-25)"
                              />
                              <ellipse
                                cx="132"
                                cy="87.5"
                                fill="#1F333C"
                                id="Hipster"
                                mask="url(#react-mask-25)"
                                rx="122"
                                ry="57.5"
                              />
                              <ellipse
                                cx="132"
                                cy="82"
                                fill="#15232A"
                                id="Very"
                                mask="url(#react-mask-25)"
                                rx="62"
                                ry="25"
                              />
                            </g>
                            <g
                              fill="none"
                              id="Top/_Resources/Kurt"
                              stroke-width="1"
                              transform="translate(62.000000, 85.000000)"
                            >
                              <defs>
                                <filter
                                  filterUnits="objectBoundingBox"
                                  height="108.0%"
                                  id="react-filter-28"
                                  width="101.5%"
                                  x="-0.8%"
                                  y="-2.0%"
                                >
                                  <feoffset
                                    dx="0"
                                    dy="2"
                                    in="SourceAlpha"
                                    result="shadowOffsetOuter1"
                                  />
                                  <fecolormatrix
                                    in="shadowOffsetOuter1"
                                    result="shadowMatrixOuter1"
                                    type="matrix"
                                    values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                                  />
                                  <femerge>
                                    <femergenode
                                      in="shadowMatrixOuter1"
                                    />
                                    <femergenode
                                      in="SourceGraphic"
                                    />
                                  </femerge>
                                </filter>
                              </defs>
                              <g
                                filter="url(#react-filter-28)"
                                id="Kurts"
                                transform="translate(5.000000, 2.000000)"
                              >
                                <path
                                  d="M66,11.1111111 C54.9625586,11.1111111 53.3705645,2.0266011 30.6705882,0.740740741 C7.98552275,-0.283199952 0.815225204,6.4494855 0.776470588,11.1111111 C0.813236892,15.4042795 -0.352293566,26.5612661 14.3647059,39.6296296 C29.1367705,55.1420807 44.2704162,49.8818301 49.6941176,44.8148148 C55.1352081,42.4731118 61.3403442,21.4596351 66,21.4814815 C70.6596558,21.5033279 76.8647919,42.4731118 82.3058824,44.8148148 C87.7295838,49.8818301 102.86323,55.1420807 117.635294,39.6296296 C132.352294,26.5612661 131.186763,15.4042795 131.223529,11.1111111 C131.184775,6.4494855 124.014477,-0.283199952 101.329412,0.740740741 C78.6294355,2.0266011 77.0374414,11.1111111 66,11.1111111 Z"
                                  fill="#F4F4F4"
                                  fill-rule="nonzero"
                                  id="It!"
                                />
                                <path
                                  d="M55.1294118,21.4814815 C55.5103632,13.8233491 42.2156493,5.64243259 27.9529412,5.92592593 C13.6973442,6.22450879 11.8417942,15.3786982 11.6470588,18.8888889 C11.2982286,27.0220633 20.014463,45.3037598 36.1058824,44.8148148 C52.1972736,44.305848 54.9092435,26.5344305 55.1294118,21.4814815 Z"
                                  fill="#2F383B"
                                  fill-rule="nonzero"
                                  id="Did"
                                />
                                <path
                                  d="M120.352941,21.4814815 C120.733893,13.8233491 107.439179,5.64243259 93.1764706,5.92592593 C78.9208736,6.22450879 77.0653236,15.3786982 76.8705882,18.8888889 C76.521758,27.0220633 85.2379924,45.3037598 101.329412,44.8148148 C117.420803,44.305848 120.132773,26.5344305 120.352941,21.4814815 Z"
                                  fill="#2F383B"
                                  fill-rule="nonzero"
                                  id="Courtney"
                                  transform="translate(98.611765, 25.370370) scale(-1, 1) translate(-98.611765, -25.370370) "
                                />
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
          <figcaption
            class="join-request__request-display-name"
          >
            displayName-0
          </figcaption>
        </figure>
        <div>
          <button
            class="join-request__button"
          >
            JoinRequest.reject
          </button>
          <button
            class="join-request__button"
          >
            JoinRequest.accept
          </button>
        </div>
      </li>
      <li
        class="join-request__unique-request-container"
      >
        <figure
          class="join-request__request-figure"
        >
          <div
            class="user-avatar"
            title="displayName-1"
          >
            <svg
              class="avatar accent-color__backlog-blue"
              height="280px"
              version="1.1"
              viewBox="0 0 264 280"
              width="264px"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <desc>
                Created with getavataaars.com
              </desc>
              <defs>
                <circle
                  cx="120"
                  cy="120"
                  id="react-path-29"
                  r="120"
                />
                <path
                  d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
                  id="react-path-30"
                />
                <path
                  d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
                  id="react-path-31"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Avataaar"
                stroke="none"
                stroke-width="1"
              >
                <g
                  id="Avataaar/Circle"
                  transform="translate(-825.000000, -1100.000000)"
                >
                  <g
                    transform="translate(825.000000, 1100.000000)"
                  >
                    <g
                      fill-rule="evenodd"
                      id="Circle"
                      stroke-width="1"
                      transform="translate(12.000000, 40.000000)"
                    >
                      <mask
                        fill="white"
                        id="react-mask-32"
                      >
                        <use
                          xlink:href="#react-path-29"
                        />
                      </mask>
                      <use
                        fill="#E6E6E6"
                        id="Circle-Background"
                        xlink:href="#react-path-29"
                      />
                      <g
                        fill="#65C9FF"
                        id="Color/Palette/Blue-01"
                        mask="url(#react-mask-32)"
                      >
                        <rect
                          height="240"
                          id="🖍Color"
                          width="240"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <mask
                      fill="white"
                      id="react-mask-33"
                    >
                      <use
                        xlink:href="#react-path-30"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      fill-rule="evenodd"
                      id="Avataaar"
                      mask="url(#react-mask-33)"
                      stroke-width="1"
                    >
                      <g
                        id="Body"
                        transform="translate(32.000000, 36.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-34"
                        >
                          <use
                            xlink:href="#react-path-31"
                          />
                        </mask>
                        <use
                          fill="#D0C6AC"
                          xlink:href="#react-path-31"
                        />
                        <g
                          fill="#FD9841"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-34)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000)"
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                        <path
                          d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                          fill="#000000"
                          fill-opacity="0.100000001"
                          id="Neck-Shadow"
                          mask="url(#react-mask-34)"
                        />
                      </g>
                      <g
                        id="Clothing/Shirt-Crew-Neck"
                        transform="translate(0.000000, 170.000000)"
                      >
                        <defs>
                          <path
                            d="M165.960472,29.2949161 C202.936473,32.3249982 232,63.2942856 232,101.051724 L232,110 L32,110 L32,101.051724 C32,62.9525631 61.591985,31.7649812 99.0454063,29.2195264 C99.0152598,29.5931145 99,29.9692272 99,30.3476251 C99,42.2107177 113.998461,51.8276544 132.5,51.8276544 C151.001539,51.8276544 166,42.2107177 166,30.3476251 C166,29.9946691 165.986723,29.6437014 165.960472,29.2949161 Z"
                            id="react-path-35"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-36"
                        >
                          <use
                            xlink:href="#react-path-35"
                          />
                        </mask>
                        <use
                          fill="#E6E6E6"
                          fill-rule="evenodd"
                          id="Clothes"
                          xlink:href="#react-path-35"
                        />
                        <g
                          fill="#262E33"
                          fill-rule="evenodd"
                          id="Color/Palette/Gray-01"
                          mask="url(#react-mask-36)"
                        >
                          <rect
                            height="110"
                            id="🖍Color"
                            width="264"
                            x="0"
                            y="0"
                          />
                        </g>
                        <g
                          fill="#000000"
                          fill-opacity="0.16"
                          fill-rule="evenodd"
                          id="Shadowy"
                          mask="url(#react-mask-36)"
                          opacity="0.599999964"
                          stroke-width="1"
                        >
                          <g
                            id="Hola-👋🏼"
                            transform="translate(92.000000, 4.000000)"
                          >
                            <ellipse
                              cx="40.5"
                              cy="27.8476251"
                              rx="39.6351047"
                              ry="26.9138272"
                            />
                          </g>
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        id="Face"
                        transform="translate(76.000000, 82.000000)"
                      >
                        <g
                          id="Mouth/Scream-Open"
                          transform="translate(2.000000, 52.000000)"
                        >
                          <defs>
                            <path
                              d="M34.0082051,15.1361102 C35.1280248,29.123916 38.2345159,40.9925405 53.9961505,40.9999965 C69.757785,41.0074525 72.9169073,29.0566179 73.9942614,15.0063928 C74.0809675,13.8756222 73.1738581,12.9999965 72.0369872,12.9999965 C65.3505138,12.9999965 62.6703194,14.9936002 53.9894323,14.9999965 C45.3085452,15.0063928 40.7567994,12.9999965 36.0924943,12.9999965 C34.9490269,12.9999965 33.8961688,13.7366502 34.0082051,15.1361102 Z"
                              id="react-path-37"
                            />
                          </defs>
                          <mask
                            fill="white"
                            id="react-mask-38"
                          >
                            <use
                              transform="translate(54.000000, 26.999998) scale(1, -1) translate(-54.000000, -26.999998) "
                              xlink:href="#react-path-37"
                            />
                          </mask>
                          <use
                            fill="#000000"
                            fill-opacity="0.699999988"
                            fill-rule="evenodd"
                            id="Mouth"
                            transform="translate(54.000000, 26.999998) scale(1, -1) translate(-54.000000, -26.999998) "
                            xlink:href="#react-path-37"
                          />
                          <rect
                            fill="#FFFFFF"
                            fill-rule="evenodd"
                            height="16"
                            id="Teeth"
                            mask="url(#react-mask-38)"
                            rx="5"
                            width="31"
                            x="39"
                            y="2"
                          />
                          <g
                            fill="#FF4F6D"
                            fill-rule="evenodd"
                            id="Tongue"
                            mask="url(#react-mask-38)"
                            stroke-width="1"
                          >
                            <g
                              id="Say-ahhhh"
                              transform="translate(38.000000, 32.000000)"
                            >
                              <circle
                                cx="11"
                                cy="11"
                                r="11"
                              />
                              <circle
                                cx="21"
                                cy="11"
                                r="11"
                              />
                            </g>
                          </g>
                        </g>
                        <g
                          fill-opacity="0.16"
                          id="Nose/Default"
                          transform="translate(28.000000, 40.000000)"
                        >
                          <path
                            d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                            id="Nose"
                          />
                        </g>
                        <g
                          fill="#FF5353"
                          fill-opacity="0.8"
                          fill-rule="nonzero"
                          id="Eyes/Hearts-😍"
                          transform="translate(0.000000, 8.000000)"
                        >
                          <path
                            d="M35.9583333,10 C33.4074091,10 30.8837273,11.9797894 29.5,13.8206358 C28.1106364,11.9797894 25.5925909,10 23.0416667,10 C17.5523182,10 14,13.3341032 14,17.6412715 C14,23.3708668 18.4118636,26.771228 23.0416667,30.376724 C24.695,31.6133636 27.8223436,34.7777086 28.2083333,35.470905 C28.5943231,36.1641015 30.3143077,36.1885229 30.7916667,35.470905 C31.2690257,34.7532872 34.3021818,31.6133636 35.9583333,30.376724 C40.5853182,26.771228 45,23.3708668 45,17.6412715 C45,13.3341032 41.4476818,10 35.9583333,10 Z"
                            id="Heart"
                          />
                          <path
                            d="M88.9583333,10 C86.4074091,10 83.8837273,11.9797894 82.5,13.8206358 C81.1106364,11.9797894 78.5925909,10 76.0416667,10 C70.5523182,10 67,13.3341032 67,17.6412715 C67,23.3708668 71.4118636,26.771228 76.0416667,30.376724 C77.695,31.6133636 80.8223436,34.7777086 81.2083333,35.470905 C81.5943231,36.1641015 83.3143077,36.1885229 83.7916667,35.470905 C84.2690257,34.7532872 87.3021818,31.6133636 88.9583333,30.376724 C93.5853182,26.771228 98,23.3708668 98,17.6412715 C98,13.3341032 94.4476818,10 88.9583333,10 Z"
                            id="Heart"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          id="Eyebrow/Natural/Unibrow-Natural"
                        >
                          <path
                            d="M57.000525,12 C56.999825,11.9961 56.999825,11.9961 57.000525,12 M59.4596631,14.892451 C61.3120123,16.058698 64.1131185,16.7894891 65.7030886,17.0505179 C71.9486685,18.0766191 78.0153663,15.945512 84.1715051,15.0153209 C89.636055,14.1895424 95.8563653,13.4967455 100.86041,16.507708 C100.987756,16.584232 101.997542,17.2147893 102.524546,17.7511372 C102.91024,18.1443003 103.563259,18.0619945 103.822605,17.5722412 C105.241692,14.8939029 97.7243204,8.76008291 96.2812935,8.14993193 C89.7471082,5.39200867 81.0899445,8.32440654 74.4284137,9.38927986 C70.6888462,9.98718701 66.9279989,10.3803501 63.2409655,11.2908151 C61.9188284,11.6171635 60.6278928,12.2066818 59.3382119,12.3724317 C59.1848981,12.1429782 58.9889964,12 58.7633758,12 C57.5922879,12 55.8451696,15.4574504 58.0750241,15.6547468 C58.7728345,15.7164887 59.215997,15.3816732 59.4596631,14.892451 Z"
                            id="Kahlo"
                            transform="translate(80.500000, 12.500000) rotate(-2.000000) translate(-80.500000, -12.500000) "
                          />
                          <path
                            d="M54.999475,12 C55.000175,11.9961 55.000175,11.9961 54.999475,12 M15.7187065,8.14993193 C22.2528918,5.39200867 30.9100555,8.32440654 37.5715863,9.38927986 C41.3111538,9.98718701 45.0720011,10.3803501 48.7590345,11.2908151 C50.2416282,11.6567696 51.6849876,12.3536477 53.1313394,12.4128263 C53.8325707,12.4413952 54.2674737,13.2763566 53.8149484,13.8242681 C52.3320222,15.6179895 48.3271239,16.7172136 46.2969114,17.0505179 C40.0513315,18.0766191 33.9846337,15.945512 27.8284949,15.0153209 C22.363945,14.1895424 16.1436347,13.4967455 11.1395899,16.507708 C11.0122444,16.584232 10.0024581,17.2147893 9.47545402,17.7511372 C9.0897602,18.1443003 8.43674067,18.0619945 8.17739482,17.5722412 C6.75830756,14.8939029 14.2756796,8.76008291 15.7187065,8.14993193 Z M54.9339874,11 C56.1050753,11 57.8521936,15.4015737 55.6223391,15.6527457 C53.3924847,15.9039176 53.7628995,11 54.9339874,11 Z"
                            id="Frida"
                            transform="translate(32.348682, 12.500000) rotate(2.000000) translate(-32.348682, -12.500000) "
                          />
                        </g>
                      </g>
                      <g
                        fill-rule="evenodd"
                        id="Top"
                        stroke-width="1"
                      >
                        <defs>
                          <rect
                            height="280"
                            id="react-path-40"
                            width="264"
                            x="0"
                            y="0"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-39"
                        >
                          <use
                            xlink:href="#react-path-40"
                          />
                        </mask>
                        <g
                          id="Mask"
                        />
                        <g
                          id="Top/Accesories/Eyepatch"
                          mask="url(#react-mask-39)"
                        >
                          <g
                            transform="translate(-1.000000, 0.000000)"
                          >
                            <path
                              d="M160.395307,39.7810237 C157.318088,36.6927979 154.11865,43.6386608 152.623361,45.4281124 C149.013122,49.7486528 145.540256,54.182935 141.868413,58.4518947 C134.616309,66.8823544 127.439316,75.3743141 120.233991,83.8401528 C119.140279,85.1257012 119.27271,85.2649028 117.837048,85.3885641 C116.88598,85.4708947 115.563312,84.9802173 114.5737,84.9256608 C111.823607,84.774556 109.112057,85.2348141 106.435756,85.8227012 C101.091389,86.9961608 95.4264863,88.9291124 90.7890799,91.898306 C89.5718308,92.677306 88.7874545,93.5971608 87.4670933,93.841177 C86.3183659,94.0534512 84.794416,93.6295641 83.622299,93.5194592 C81.5412806,93.3237173 78.5378542,92.4726366 76.4953793,92.9137173 C73.9027538,93.4738302 72.9174244,96.6109915 75.5604528,98.0003624 C77.570314,99.0564431 81.5706,98.4761608 83.8235816,98.6447899 C86.3971,98.8372253 85.6120649,98.704306 85.2473843,101.164306 C84.7239177,104.69758 85.5985582,108.646475 87.0885766,111.878201 C90.5482655,119.383185 100.122861,127.335201 108.8551,126.603153 C116.142123,125.992451 122.526834,119.413274 125.519389,113.099935 C127.050916,109.868871 127.954546,106.192096 128.250376,102.628403 C128.438811,100.36183 128.333722,97.9580399 127.684083,95.7632173 C127.362888,94.6783705 126.853916,93.5554995 126.308378,92.5695157 C125.866281,91.7710076 123.908799,89.9203866 123.788886,89.1165882 C123.556307,87.5602415 127.973324,83.3874995 128.816339,82.3443141 C132.788953,77.4276205 136.780344,72.5320882 140.721662,67.5889431 C144.603353,62.7201931 148.506456,57.8640076 152.489612,53.0785802 C154.294237,50.9098786 163.318023,42.7148382 160.395307,39.7810237"
                              fill="#28354B"
                              fill-rule="evenodd"
                              id="Badass-Eyepatch"
                            />
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
          <figcaption
            class="join-request__request-display-name"
          >
            displayName-1
          </figcaption>
        </figure>
        <div>
          <button
            class="join-request__button"
          >
            JoinRequest.reject
          </button>
          <button
            class="join-request__button"
          >
            JoinRequest.accept
          </button>
        </div>
      </li>
      <li
        class="join-request__unique-request-container"
      >
        <figure
          class="join-request__request-figure"
        >
          <div
            class="user-avatar"
            title="displayName-2"
          >
            <svg
              class="avatar accent-color__online-orange"
              height="280px"
              version="1.1"
              viewBox="0 0 264 280"
              width="264px"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <desc>
                Created with getavataaars.com
              </desc>
              <defs>
                <circle
                  cx="120"
                  cy="120"
                  id="react-path-41"
                  r="120"
                />
                <path
                  d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
                  id="react-path-42"
                />
                <path
                  d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
                  id="react-path-43"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Avataaar"
                stroke="none"
                stroke-width="1"
              >
                <g
                  id="Avataaar/Circle"
                  transform="translate(-825.000000, -1100.000000)"
                >
                  <g
                    transform="translate(825.000000, 1100.000000)"
                  >
                    <g
                      fill-rule="evenodd"
                      id="Circle"
                      stroke-width="1"
                      transform="translate(12.000000, 40.000000)"
                    >
                      <mask
                        fill="white"
                        id="react-mask-44"
                      >
                        <use
                          xlink:href="#react-path-41"
                        />
                      </mask>
                      <use
                        fill="#E6E6E6"
                        id="Circle-Background"
                        xlink:href="#react-path-41"
                      />
                      <g
                        fill="#65C9FF"
                        id="Color/Palette/Blue-01"
                        mask="url(#react-mask-44)"
                      >
                        <rect
                          height="240"
                          id="🖍Color"
                          width="240"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <mask
                      fill="white"
                      id="react-mask-45"
                    >
                      <use
                        xlink:href="#react-path-42"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      fill-rule="evenodd"
                      id="Avataaar"
                      mask="url(#react-mask-45)"
                      stroke-width="1"
                    >
                      <g
                        id="Body"
                        transform="translate(32.000000, 36.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-46"
                        >
                          <use
                            xlink:href="#react-path-43"
                          />
                        </mask>
                        <use
                          fill="#D0C6AC"
                          xlink:href="#react-path-43"
                        />
                        <g
                          fill="#614335"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-46)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000)"
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                        <path
                          d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                          fill="#000000"
                          fill-opacity="0.100000001"
                          id="Neck-Shadow"
                          mask="url(#react-mask-46)"
                        />
                      </g>
                      <g
                        id="Clothing/Overall"
                        transform="translate(0.000000, 170.000000)"
                      >
                        <defs>
                          <path
                            d="M94,29.6883435 L94,74 L170,74 L170,29.6883435 C179.362956,30.9893126 188.149952,34.0907916 196.00002,38.6318143 L196,110 L187,110 L77,110 L68,110 L68,38.6318027 C75.8500482,34.0907916 84.6370437,30.9893126 94,29.6883435 Z"
                            id="react-path-47"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-48"
                        >
                          <use
                            xlink:href="#react-path-47"
                          />
                        </mask>
                        <use
                          fill="#B7C1DB"
                          fill-rule="evenodd"
                          id="Overall"
                          xlink:href="#react-path-47"
                        />
                        <g
                          fill="#FFFFFF"
                          fill-rule="evenodd"
                          id="Color/Palette/Gray-01"
                          mask="url(#react-mask-48)"
                        >
                          <rect
                            height="110"
                            id="🖍Color"
                            width="264"
                            x="0"
                            y="0"
                          />
                        </g>
                        <circle
                          cx="81"
                          cy="83"
                          fill="#F4F4F4"
                          fill-rule="evenodd"
                          id="Button"
                          r="5"
                        />
                        <circle
                          cx="183"
                          cy="83"
                          fill="#F4F4F4"
                          fill-rule="evenodd"
                          id="Button"
                          r="5"
                        />
                      </g>
                      <g
                        fill="#000000"
                        id="Face"
                        transform="translate(76.000000, 82.000000)"
                      >
                        <g
                          fill="#000000"
                          fill-opacity="0.699999988"
                          id="Mouth/Sad"
                          transform="translate(2.000000, 52.000000)"
                        >
                          <path
                            d="M40.0582943,16.6539438 C40.7076459,23.6831146 46.7016363,28.3768187 54,28.3768187 C61.3416045,28.3768187 67.3633339,23.627332 67.9526838,16.5287605 C67.9840218,16.1513016 67.0772329,15.8529531 66.6289111,16.077395 C61.0902255,18.8502083 56.8805885,20.2366149 54,20.2366149 C51.1558456,20.2366149 47.0072148,18.8804569 41.5541074,16.168141 C41.0473376,15.9160792 40.0197139,16.2363147 40.0582943,16.6539438 Z"
                            id="Mouth"
                            transform="translate(54.005357, 22.188409) scale(1, -1) translate(-54.005357, -22.188409) "
                          />
                        </g>
                        <g
                          fill-opacity="0.16"
                          id="Nose/Default"
                          transform="translate(28.000000, 40.000000)"
                        >
                          <path
                            d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                            id="Nose"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          id="Eyes/Happy-😁"
                          transform="translate(0.000000, 8.000000)"
                        >
                          <path
                            d="M16.1601674,22.4473116 C18.006676,18.648508 22.1644225,16 26.9975803,16 C31.8136766,16 35.9591217,18.629842 37.8153518,22.4071242 C38.3667605,23.5291977 37.5821037,24.4474817 36.790607,23.7670228 C34.3395063,21.6597833 30.8587163,20.3437884 26.9975803,20.3437884 C23.2572061,20.3437884 19.8737584,21.5787519 17.4375392,23.5716412 C16.5467928,24.3002944 15.6201012,23.5583844 16.1601674,22.4473116 Z"
                            id="Squint"
                          />
                          <path
                            d="M74.1601674,22.4473116 C76.006676,18.648508 80.1644225,16 84.9975803,16 C89.8136766,16 93.9591217,18.629842 95.8153518,22.4071242 C96.3667605,23.5291977 95.5821037,24.4474817 94.790607,23.7670228 C92.3395063,21.6597833 88.8587163,20.3437884 84.9975803,20.3437884 C81.2572061,20.3437884 77.8737584,21.5787519 75.4375392,23.5716412 C74.5467928,24.3002944 73.6201012,23.5583844 74.1601674,22.4473116 Z"
                            id="Squint"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          id="Eyebrow/Natural/Sad-Concerned-Natural"
                        >
                          <path
                            d="M22.7663531,5.57844898 L23.6772984,5.17582144 C28.9190996,3.09473425 36.8645466,3.96712704 41.7227321,6.29911638 C42.2897848,6.57148957 41.9021563,7.4519421 41.3211012,7.40711006 C26.4021788,6.25602197 16.3582869,15.5525942 12.9460869,21.8470939 C12.8449215,22.0337142 12.5391523,22.05489 12.4635344,21.8808353 C10.156283,16.5620676 16.9134476,7.89614725 22.7663531,5.57844898 Z"
                            id="Eyebrow"
                            transform="translate(27.000000, 13.000000) scale(-1, -1) translate(-27.000000, -13.000000) "
                          />
                          <path
                            d="M80.7663531,5.57844898 L81.6772984,5.17582144 C86.9190996,3.09473425 94.8645466,3.96712704 99.7227321,6.29911638 C100.289785,6.57148957 99.9021563,7.4519421 99.3211012,7.40711006 C84.4021788,6.25602197 74.3582869,15.5525942 70.9460869,21.8470939 C70.8449215,22.0337142 70.5391523,22.05489 70.4635344,21.8808353 C68.156283,16.5620676 74.9134476,7.89614725 80.7663531,5.57844898 Z"
                            id="Eyebrow"
                            transform="translate(85.000000, 13.000000) scale(1, -1) translate(-85.000000, -13.000000) "
                          />
                        </g>
                      </g>
                      <g
                        id="Top"
                      >
                        <defs>
                          <rect
                            height="280"
                            id="react-path-58"
                            width="264"
                            x="0"
                            y="0"
                          />
                          <path
                            d="M129.659138,38.3566287 C132.459581,45.3577056 134,52.9989608 134,61 L134,69 L2,69 L2,61 C2,52.9748603 3.54971254,45.3116754 6.36620203,38.2933809 C-0.0371821146,24.8304767 -1.28053094,13.7727805 2.63615554,5.12029235 C10.141056,2.84355825 18.8342301,4.64979084 28.7156778,10.5389901 C38.4862647,3.88774159 50.289117,-4.77047603e-15 63,-7.10542736e-15 L73,-7.10542736e-15 C85.7221104,-9.44244112e-15 97.5345852,3.89461262 107.310208,10.5566215 C117.203883,4.65339747 125.906912,2.84128775 133.419297,5.12029235 C137.342115,13.7863263 136.088729,24.8651051 129.659138,38.3566287 Z"
                            id="react-path-54"
                          />
                          <path
                            d="M28.7156857,10.5389848 C18.758718,17.3171083 10.9122881,26.9651756 6.36620203,38.2933809 C-0.0371821146,24.8304767 -1.28053094,13.7727805 2.63615554,5.12029235 C10.1410556,2.84355836 18.8342292,4.64979066 28.7156763,10.5389892 Z M129.659138,38.3566287 C125.120833,27.0109143 117.273404,17.34646 107.310208,10.5566215 C117.203883,4.65339747 125.906912,2.84128775 133.419297,5.12029235 C137.342115,13.7863263 136.088729,24.8651051 129.659138,38.3566287 Z"
                            id="react-path-55"
                          />
                          <path
                            d="M21.8615933,15.9591438 C17.3889306,20.0465694 13.5271638,24.7913314 10.4291788,30.040544 C7.50356643,21.9322189 7.00287124,16.3214118 8.92709323,13.2081228 C11.5782173,12.0615989 15.8897174,12.9786059 21.8615933,15.9591438 Z M125.352616,29.6737564 C122.278044,24.5465519 118.471613,19.9084198 114.077736,15.903773 C119.880509,13.0520429 124.083178,12.1889392 126.68574,13.3144617 C128.572308,16.3668294 128.127934,21.8199276 125.352616,29.6737564 Z"
                            id="react-path-56"
                          />
                          <filter
                            filterUnits="objectBoundingBox"
                            height="106.8%"
                            id="react-filter-49"
                            width="101.4%"
                            x="-0.7%"
                            y="-1.7%"
                          >
                            <feoffset
                              dx="0"
                              dy="2"
                              in="SourceAlpha"
                              result="shadowOffsetOuter1"
                            />
                            <fecolormatrix
                              in="shadowOffsetOuter1"
                              type="matrix"
                              values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.1 0"
                            />
                          </filter>
                          <path
                            d="M67.2846026,61.4514246 C83.229708,49.8171415 105.159178,44 133.073012,44 C160.985408,44 182.871592,49.8165424 198.731564,61.4496271 L198.731562,61.4496305 C200.786183,62.956669 202.000006,65.3523289 202.000006,67.900394 L202.000004,98.3697692 C202.000004,100.578907 200.209144,102.369768 198.000006,102.369768 C197.244444,102.369768 196.504332,102.155773 195.865355,101.752558 C179.223261,91.2508526 158.536251,86 133.804323,86 C108.883259,86 87.640395,91.3314713 70.0757313,101.994414 L70.0757317,101.994414 C68.1873241,103.140806 65.7271332,102.539283 64.5807417,100.650875 C64.2008775,100.02514 64.0000054,99.3071624 64.0000054,98.5751499 L64,67.914014 C64,65.358892 65.2205159,62.9574773 67.2846026,61.4514246 Z"
                            id="react-path-57"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-50"
                        >
                          <use
                            xlink:href="#react-path-58"
                          />
                        </mask>
                        <g
                          id="Mask"
                        />
                        <g
                          id="Top/Accessories/Winter-Hat-4"
                          transform="translate(-1.000000, 0.000000)"
                        >
                          <g
                            fill-rule="evenodd"
                            id="hat"
                            stroke-width="1"
                            transform="translate(65.000000, 4.000000)"
                          >
                            <mask
                              fill="white"
                              id="react-mask-51"
                            >
                              <use
                                xlink:href="#react-path-54"
                              />
                            </mask>
                            <use
                              fill="#D8D8D8"
                              id="hat-mask"
                              xlink:href="#react-path-54"
                            />
                            <g
                              fill="#FF5C5C"
                              fill-rule="evenodd"
                              id="Color/Palette/Gray-01"
                              mask="url(#react-mask-51)"
                            >
                              <rect
                                height="280"
                                id="🖍Color"
                                width="264"
                                x="0"
                                y="0"
                              />
                            </g>
                            <mask
                              fill="white"
                              id="react-mask-52"
                            >
                              <use
                                xlink:href="#react-path-55"
                              />
                            </mask>
                            <use
                              fill="#000000"
                              fill-opacity="0.24"
                              id="shadow"
                              xlink:href="#react-path-55"
                            />
                            <mask
                              fill="white"
                              id="react-mask-53"
                            >
                              <use
                                xlink:href="#react-path-56"
                              />
                            </mask>
                            <use
                              fill="#FFFFFF"
                              fill-opacity="0.300000012"
                              id="light"
                              xlink:href="#react-path-56"
                            />
                          </g>
                          <g
                            id="hat-front"
                          >
                            <use
                              fill="black"
                              fill-opacity="1"
                              filter="url(#react-path-57)"
                              xlink:href="#react-path-57"
                            />
                            <use
                              fill="#F4F4F4"
                              fill-rule="evenodd"
                              xlink:href="#react-path-57"
                            />
                          </g>
                          <g
                            id="Facial-Hair/Moustache-Magnum"
                            transform="translate(49.000000, 72.000000)"
                          >
                            <defs>
                              <path
                                d="M83.9980103,74.839711 C83.4569991,75.6087366 82.761047,76.2496937 81.949688,76.6891498 C73.0477917,81.5102869 63.8767499,77.3322546 58.8763101,77.6298353 C56.459601,77.7739966 53.3405442,79.4153191 52.2155358,77.6791014 C50.9768736,75.7669804 55.0680827,65.2207224 64.7214121,63.4643353 C71.7310704,62.1893309 81.4972391,63.6024033 83.9980103,66.9380109 C86.4987814,63.6024033 96.2649453,62.1893309 103.274279,63.4643353 C112.927938,65.2207224 117.019147,75.7669804 115.780485,77.6791014 C114.655476,79.4153191 111.53642,77.7739966 109.119711,77.6298353 C104.118941,77.3322546 94.948229,81.5102869 86.0463327,76.6891498 C85.2349736,76.2496937 84.5390216,75.6087366 83.9980103,74.839711 Z"
                                id="react-path-60"
                              />
                            </defs>
                            <mask
                              fill="white"
                              id="react-mask-59"
                            >
                              <use
                                xlink:href="#react-path-60"
                              />
                            </mask>
                            <use
                              fill="#28354B"
                              fill-rule="evenodd"
                              id="Hey..."
                              xlink:href="#react-path-60"
                            />
                            <g
                              fill="#4A312C"
                              id="Color/Hair/Brown"
                              mask="url(#react-mask-59)"
                            >
                              <g
                                id="Color"
                                transform="translate(-32.000000, 0.000000)"
                              >
                                <rect
                                  height="244"
                                  width="264"
                                  x="0"
                                  y="0"
                                />
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
          <figcaption
            class="join-request__request-display-name"
          >
            displayName-2
          </figcaption>
        </figure>
        <div>
          <button
            class="join-request__button"
          >
            JoinRequest.reject
          </button>
          <button
            class="join-request__button"
          >
            JoinRequest.accept
          </button>
        </div>
      </li>
    </ul>
  </div>
  <div
    class="join-request__footer"
  >
    <button
      class="join-request__button"
    >
      JoinRequest.rejectAll
    </button>
    <button
      class="join-request__button"
    >
      JoinRequest.acceptAll
    </button>
  </div>
</div>
`;

exports[`JoinRequest should render correctly on single join request 1`] = `
<div
  class="join-request"
>
  <div
    class="join-request__header"
  >
    JoinRequest.title
  </div>
  <div
    class="join-request__main"
  >
    <ul
      class="join-request__requests"
    >
      <li
        class="join-request__unique-request-container"
      >
        <figure
          class="join-request__request-figure"
        >
          <div
            class="user-avatar"
            title="displayName-0"
          >
            <svg
              class="avatar accent-color__lean-lilac"
              height="280px"
              version="1.1"
              viewBox="0 0 264 280"
              width="264px"
              xmlns="http://www.w3.org/2000/svg"
              xmlns:xlink="http://www.w3.org/1999/xlink"
            >
              <desc>
                Created with getavataaars.com
              </desc>
              <defs>
                <circle
                  cx="120"
                  cy="120"
                  id="react-path-1"
                  r="120"
                />
                <path
                  d="M12,160 C12,226.27417 65.72583,280 132,280 C198.27417,280 252,226.27417 252,160 L264,160 L264,-1.42108547e-14 L-3.19744231e-14,-1.42108547e-14 L-3.19744231e-14,160 L12,160 Z"
                  id="react-path-2"
                />
                <path
                  d="M124,144.610951 L124,163 L128,163 L128,163 C167.764502,163 200,195.235498 200,235 L200,244 L0,244 L0,235 C-4.86974701e-15,195.235498 32.235498,163 72,163 L72,163 L76,163 L76,144.610951 C58.7626345,136.422372 46.3722246,119.687011 44.3051388,99.8812385 C38.4803105,99.0577866 34,94.0521096 34,88 L34,74 C34,68.0540074 38.3245733,63.1180731 44,62.1659169 L44,56 L44,56 C44,25.072054 69.072054,5.68137151e-15 100,0 L100,0 L100,0 C130.927946,-5.68137151e-15 156,25.072054 156,56 L156,62.1659169 C161.675427,63.1180731 166,68.0540074 166,74 L166,88 C166,94.0521096 161.51969,99.0577866 155.694861,99.8812385 C153.627775,119.687011 141.237365,136.422372 124,144.610951 Z"
                  id="react-path-3"
                />
              </defs>
              <g
                fill="none"
                fill-rule="evenodd"
                id="Avataaar"
                stroke="none"
                stroke-width="1"
              >
                <g
                  id="Avataaar/Circle"
                  transform="translate(-825.000000, -1100.000000)"
                >
                  <g
                    transform="translate(825.000000, 1100.000000)"
                  >
                    <g
                      fill-rule="evenodd"
                      id="Circle"
                      stroke-width="1"
                      transform="translate(12.000000, 40.000000)"
                    >
                      <mask
                        fill="white"
                        id="react-mask-4"
                      >
                        <use
                          xlink:href="#react-path-1"
                        />
                      </mask>
                      <use
                        fill="#E6E6E6"
                        id="Circle-Background"
                        xlink:href="#react-path-1"
                      />
                      <g
                        fill="#65C9FF"
                        id="Color/Palette/Blue-01"
                        mask="url(#react-mask-4)"
                      >
                        <rect
                          height="240"
                          id="🖍Color"
                          width="240"
                          x="0"
                          y="0"
                        />
                      </g>
                    </g>
                    <mask
                      fill="white"
                      id="react-mask-5"
                    >
                      <use
                        xlink:href="#react-path-2"
                      />
                    </mask>
                    <g
                      id="Mask"
                    />
                    <g
                      fill-rule="evenodd"
                      id="Avataaar"
                      mask="url(#react-mask-5)"
                      stroke-width="1"
                    >
                      <g
                        id="Body"
                        transform="translate(32.000000, 36.000000)"
                      >
                        <mask
                          fill="white"
                          id="react-mask-6"
                        >
                          <use
                            xlink:href="#react-path-3"
                          />
                        </mask>
                        <use
                          fill="#D0C6AC"
                          xlink:href="#react-path-3"
                        />
                        <g
                          fill="#F8D25C"
                          id="Skin/👶🏽-03-Brown"
                          mask="url(#react-mask-6)"
                        >
                          <g
                            id="Color"
                            transform="translate(0.000000, 0.000000)"
                          >
                            <rect
                              height="280"
                              width="264"
                              x="0"
                              y="0"
                            />
                          </g>
                        </g>
                        <path
                          d="M156,79 L156,102 C156,132.927946 130.927946,158 100,158 C69.072054,158 44,132.927946 44,102 L44,79 L44,94 C44,124.927946 69.072054,150 100,150 C130.927946,150 156,124.927946 156,94 L156,79 Z"
                          fill="#000000"
                          fill-opacity="0.100000001"
                          id="Neck-Shadow"
                          mask="url(#react-mask-6)"
                        />
                      </g>
                      <g
                        id="Clothing/Shirt-Scoop-Neck"
                        transform="translate(0.000000, 170.000000)"
                      >
                        <defs>
                          <path
                            d="M181.544255,32.3304167 C210.784209,41.4878872 232,68.7921987 232,101.051724 L232,110 L32,110 L32,101.051724 C32,68.3969699 53.7388273,40.8195914 83.5340368,32.0020332 C83.182234,33.4201865 83,34.8712315 83,36.3476251 C83,52.6289957 105.161905,65.8276544 132.5,65.8276544 C159.838095,65.8276544 182,52.6289957 182,36.3476251 C182,34.9849859 181.844766,33.6439396 181.544255,32.3304167 Z"
                            id="react-path-7"
                          />
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-8"
                        >
                          <use
                            xlink:href="#react-path-7"
                          />
                        </mask>
                        <use
                          fill="#E6E6E6"
                          fill-rule="evenodd"
                          id="Clothes"
                          xlink:href="#react-path-7"
                        />
                        <g
                          fill="#65C9FF"
                          fill-rule="evenodd"
                          id="Color/Palette/Gray-01"
                          mask="url(#react-mask-8)"
                        >
                          <rect
                            height="110"
                            id="🖍Color"
                            width="264"
                            x="0"
                            y="0"
                          />
                        </g>
                      </g>
                      <g
                        fill="#000000"
                        id="Face"
                        transform="translate(76.000000, 82.000000)"
                      >
                        <g
                          fill="#000000"
                          fill-opacity="0.699999988"
                          id="Mouth/Serious"
                          transform="translate(2.000000, 52.000000)"
                        >
                          <rect
                            height="6"
                            id="Why-so-serious?"
                            rx="3"
                            width="24"
                            x="42"
                            y="18"
                          />
                        </g>
                        <g
                          fill-opacity="0.16"
                          id="Nose/Default"
                          transform="translate(28.000000, 40.000000)"
                        >
                          <path
                            d="M16,8 C16,12.418278 21.372583,16 28,16 L28,16 C34.627417,16 40,12.418278 40,8"
                            id="Nose"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          id="Eyes/Side-😒"
                          transform="translate(0.000000, 8.000000)"
                        >
                          <path
                            d="M27.2409577,20.3455337 C26.462715,21.3574913 26,22.6247092 26,24 C26,27.3137085 28.6862915,30 32,30 C35.3137085,30 38,27.3137085 38,24 C38,23.7097898 37.9793961,23.4243919 37.9395713,23.1451894 C37.9474218,22.9227843 37.9097825,22.6709538 37.8153518,22.4071242 C37.7703692,22.2814477 37.7221152,22.1572512 37.6706873,22.0345685 C37.3370199,21.0717264 36.7650456,20.2202109 36.0253277,19.550585 C33.898886,17.3173253 30.5064735,16 26.9975803,16 C22.1644225,16 18.006676,18.648508 16.1601674,22.4473116 C15.6201012,23.5583844 16.5467928,24.3002944 17.4375392,23.5716412 C19.8737584,21.5787519 23.2572061,20.3437884 26.9975803,20.3437884 C27.0788767,20.3437884 27.1600045,20.3443718 27.2409577,20.3455337 Z"
                            id="Eye"
                          />
                          <path
                            d="M85.2409577,20.3455337 C84.462715,21.3574913 84,22.6247092 84,24 C84,27.3137085 86.6862915,30 90,30 C93.3137085,30 96,27.3137085 96,24 C96,23.7097898 95.9793961,23.4243919 95.9395713,23.1451894 C95.9474218,22.9227843 95.9097825,22.6709538 95.8153518,22.4071242 C95.7703692,22.2814477 95.7221152,22.1572512 95.6706873,22.0345685 C95.3370199,21.0717264 94.7650456,20.2202109 94.0253277,19.550585 C91.898886,17.3173253 88.5064735,16 84.9975803,16 C80.1644225,16 76.006676,18.648508 74.1601674,22.4473116 C73.6201012,23.5583844 74.5467928,24.3002944 75.4375392,23.5716412 C77.8737584,21.5787519 81.2572061,20.3437884 84.9975803,20.3437884 C85.0788767,20.3437884 85.1600045,20.3443718 85.2409577,20.3455337 Z"
                            id="Eye"
                          />
                        </g>
                        <g
                          fill-opacity="0.599999964"
                          fill-rule="nonzero"
                          id="Eyebrow/Outline/Up-Down"
                        >
                          <path
                            d="M15.5914402,14.1619718 C20.0874642,7.83556966 29.6031809,4.65350252 39.3473715,7.79575991 C40.3986323,8.13476518 41.5256656,7.55736801 41.8646708,6.50610724 C42.2036761,5.45484647 41.6262789,4.32781316 40.5750182,3.98880789 C29.1665516,0.309863172 17.8358054,4.09887835 12.3309495,11.8448183 C11.6910852,12.7451779 11.9022584,13.9937761 12.8026181,14.6336404 C13.7029777,15.2735046 14.9515759,15.0623314 15.5914402,14.1619718 Z"
                            id="Eyebrow"
                          />
                          <path
                            d="M73.6376405,21.1577995 C77.5525501,15.6490895 88.2853148,12.56006 97.5304219,14.8304032 C98.6031199,15.0938282 99.6862617,14.4377829 99.9496867,13.3650849 C100.213112,12.2923868 99.5570664,11.2092451 98.4843684,10.9458201 C87.7477584,8.30920485 75.3194947,11.8862211 70.3771498,18.840646 C69.7372855,19.7410057 69.9484587,20.9896038 70.8488184,21.6294681 C71.749178,22.2693324 72.9977762,22.0581591 73.6376405,21.1577995 Z"
                            id="Eyebrow"
                            transform="translate(85.007549, 16.038421) scale(-1, 1) translate(-85.007549, -16.038421) "
                          />
                        </g>
                      </g>
                      <g
                        fill-rule="evenodd"
                        id="Top"
                        stroke-width="1"
                      >
                        <defs>
                          <rect
                            height="280"
                            id="react-path-13"
                            width="264"
                            x="0"
                            y="0"
                          />
                          <path
                            d="M156,180.610951 C173.530782,172.282984 186.048193,155.114792 187.791419,134.867187 C193.569129,134.002364 198,129.018625 198,123 L198,110 C198,104.054007 193.675427,99.1180731 188,98.1659169 L188,92 C188,84.0546578 186.345324,76.495786 183.361772,69.6491845 C173.434911,53 89.3126235,53.8033992 80.7098777,69.4854816 C77.6811789,76.3752214 76,83.9912805 76,92 L76,98.1659169 C70.3245733,99.1180731 66,104.054007 66,110 L66,123 C66,129.018625 70.4308707,134.002364 76.2085808,134.867187 C77.9518066,155.114792 90.4692178,172.282984 108,180.610951 L108,199 L104,199 L104,199 C64.235498,199 32,231.235498 32,271 L32,280 L232,280 L232,271 C232,231.235498 199.764502,199 160,199 L156,199 L156,180.610951 Z M0,5.68434189e-14 L264,5.68434189e-14 L264,280 L0,280 L0,5.68434189e-14 Z"
                            id="react-path-12"
                          />
                          <filter
                            filterUnits="objectBoundingBox"
                            height="108.0%"
                            id="react-filter-9"
                            width="101.5%"
                            x="-0.8%"
                            y="-2.0%"
                          >
                            <feoffset
                              dx="0"
                              dy="2"
                              in="SourceAlpha"
                              result="shadowOffsetOuter1"
                            />
                            <fecolormatrix
                              in="shadowOffsetOuter1"
                              result="shadowMatrixOuter1"
                              type="matrix"
                              values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                            />
                            <femerge>
                              <femergenode
                                in="shadowMatrixOuter1"
                              />
                              <femergenode
                                in="SourceGraphic"
                              />
                            </femerge>
                          </filter>
                        </defs>
                        <mask
                          fill="white"
                          id="react-mask-10"
                        >
                          <use
                            xlink:href="#react-path-13"
                          />
                        </mask>
                        <g
                          id="Mask"
                        />
                        <g
                          id="Top/Accesories/Hat"
                          mask="url(#react-mask-10)"
                        >
                          <g
                            transform="translate(-1.000000, 0.000000)"
                          >
                            <g
                              fill-rule="evenodd"
                              id="Hat"
                              stroke-width="1"
                              transform="translate(1.000000, 0.000000)"
                            >
                              <mask
                                fill="white"
                                id="react-mask-11"
                              >
                                <use
                                  xlink:href="#react-path-12"
                                />
                              </mask>
                              <g
                                id="Mask-Hair"
                              />
                              <path
                                d="M123.182388,2 L141.817612,2 L141.817612,2 C160.609055,2 176.866947,15.0804442 180.890118,33.4361631 L190,75 L75,75 L84.1098821,33.4361631 L84.1098821,33.4361631 C88.1330533,15.0804442 104.390945,2 123.182388,2 Z"
                                fill="#1F333C"
                                mask="url(#react-mask-11)"
                              />
                              <ellipse
                                cx="132"
                                cy="87.5"
                                fill="#1F333C"
                                id="Hipster"
                                mask="url(#react-mask-11)"
                                rx="122"
                                ry="57.5"
                              />
                              <ellipse
                                cx="132"
                                cy="82"
                                fill="#15232A"
                                id="Very"
                                mask="url(#react-mask-11)"
                                rx="62"
                                ry="25"
                              />
                            </g>
                            <g
                              fill="none"
                              id="Top/_Resources/Kurt"
                              stroke-width="1"
                              transform="translate(62.000000, 85.000000)"
                            >
                              <defs>
                                <filter
                                  filterUnits="objectBoundingBox"
                                  height="108.0%"
                                  id="react-filter-14"
                                  width="101.5%"
                                  x="-0.8%"
                                  y="-2.0%"
                                >
                                  <feoffset
                                    dx="0"
                                    dy="2"
                                    in="SourceAlpha"
                                    result="shadowOffsetOuter1"
                                  />
                                  <fecolormatrix
                                    in="shadowOffsetOuter1"
                                    result="shadowMatrixOuter1"
                                    type="matrix"
                                    values="0 0 0 0 0   0 0 0 0 0   0 0 0 0 0  0 0 0 0.16 0"
                                  />
                                  <femerge>
                                    <femergenode
                                      in="shadowMatrixOuter1"
                                    />
                                    <femergenode
                                      in="SourceGraphic"
                                    />
                                  </femerge>
                                </filter>
                              </defs>
                              <g
                                filter="url(#react-filter-14)"
                                id="Kurts"
                                transform="translate(5.000000, 2.000000)"
                              >
                                <path
                                  d="M66,11.1111111 C54.9625586,11.1111111 53.3705645,2.0266011 30.6705882,0.740740741 C7.98552275,-0.283199952 0.815225204,6.4494855 0.776470588,11.1111111 C0.813236892,15.4042795 -0.352293566,26.5612661 14.3647059,39.6296296 C29.1367705,55.1420807 44.2704162,49.8818301 49.6941176,44.8148148 C55.1352081,42.4731118 61.3403442,21.4596351 66,21.4814815 C70.6596558,21.5033279 76.8647919,42.4731118 82.3058824,44.8148148 C87.7295838,49.8818301 102.86323,55.1420807 117.635294,39.6296296 C132.352294,26.5612661 131.186763,15.4042795 131.223529,11.1111111 C131.184775,6.4494855 124.014477,-0.283199952 101.329412,0.740740741 C78.6294355,2.0266011 77.0374414,11.1111111 66,11.1111111 Z"
                                  fill="#F4F4F4"
                                  fill-rule="nonzero"
                                  id="It!"
                                />
                                <path
                                  d="M55.1294118,21.4814815 C55.5103632,13.8233491 42.2156493,5.64243259 27.9529412,5.92592593 C13.6973442,6.22450879 11.8417942,15.3786982 11.6470588,18.8888889 C11.2982286,27.0220633 20.014463,45.3037598 36.1058824,44.8148148 C52.1972736,44.305848 54.9092435,26.5344305 55.1294118,21.4814815 Z"
                                  fill="#2F383B"
                                  fill-rule="nonzero"
                                  id="Did"
                                />
                                <path
                                  d="M120.352941,21.4814815 C120.733893,13.8233491 107.439179,5.64243259 93.1764706,5.92592593 C78.9208736,6.22450879 77.0653236,15.3786982 76.8705882,18.8888889 C76.521758,27.0220633 85.2379924,45.3037598 101.329412,44.8148148 C117.420803,44.305848 120.132773,26.5344305 120.352941,21.4814815 Z"
                                  fill="#2F383B"
                                  fill-rule="nonzero"
                                  id="Courtney"
                                  transform="translate(98.611765, 25.370370) scale(-1, 1) translate(-98.611765, -25.370370) "
                                />
                              </g>
                            </g>
                          </g>
                        </g>
                      </g>
                    </g>
                  </g>
                </g>
              </g>
            </svg>
          </div>
          <figcaption
            class="join-request__request-display-name"
          >
            displayName-0
          </figcaption>
        </figure>
        <div>
          <button
            class="join-request__button"
          >
            JoinRequest.reject
          </button>
          <button
            class="join-request__button"
          >
            JoinRequest.accept
          </button>
        </div>
      </li>
    </ul>
  </div>
</div>
`;
